cmake_minimum_required(VERSION 3.10)
project(SmartDriverFatigueSimulation VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(sdfs src/main.cpp src/Driver.cpp src/Sensor.cpp src/Monitor.cpp src/Logger.cpp)
find_package(Threads REQUIRED)
if(THREADS_FOUND)
    target_link_libraries(sdfs PRIVATE Threads::Threads)
endif()
